--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <h2>How did we do?</h2>
 
-  <p> Please let us know how we did with your support request. All feedback is appreciated 
+  <p class="please"> Please let us know how we did with your support request. All feedback is appreciated 
   to help us improve our offering!</p>
   
   <ul class="list">
@@ -40,11 +40,12 @@
  <div class="mobile">
   <img src="images/illustration-thank-you.svg" alt="">
  </div> 
+
   <p class="select">You selected <span id="vote">2</span> <!-- Add rating here --> out of 5
   </p> 
-  <p>Thank you!</p> 
+  <p class="thanks">Thank you!</p> 
  
-  <p>We appreciate you taking the time to give a rating. If you ever need more support, 
+  <p class="appreciate">We appreciate you taking the time to give a rating. If you ever need more support, 
      don’t hesitate to get in touch!</p> 
  
    <!-- Thank you state end -->
